# qa-kit

./: .gitignore  .qa_cache.json  Makefile  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml
allure-report/: index.html
allure-report/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
allure-report/data/attachments/: 14710d0cff525990.txt  bf48a51e1c8aedc7.txt  d7dd8869bdfadab3.txt  df446199fbfb298a.txt  f5414046a1ea5742.txt
allure-report/data/test-cases/: 584c44b645b06f02.json  c7ea7db5a2f67591.json  cf6f0fbec84f59a9.json
allure-report/export/: influxDbData.txt  prometheusData.txt
allure-report/history/: history.json
allure-report/widgets/: duration.json  severity.json  summary.json
allure-results/: 18557ae7-3dd9-4bb9-9218-d89807ab7436-attachment.txt  27b30944-9225-4f05-852e-b0e469c35932-result.json  30516719-3368-4497-89c2-c1525108dfbd-result.json  55a2a9e3-2fbd-4d5f-a665-adbc8e30a050-result.json  63bcafd5-1a4f-4fdb-92bf-5c29df50d39c-result.json  74e634f1-aa71-4cfb-a7fe-5da981144f57-container.json  85436638-5a2f-4be5-996f-a739facffcbb-result.json  b3f50d6f-050e-4990-b8cd-1f55a70d35c8-container.json  d4e3ba67-f004-4c69-a01e-2b803508b694-container.json  d6ed2648-8aa3-4286-b924-f39b0c29e89d-container.json  e3d06dcd-180f-40e6-915d-291928b53241-container.json
data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 1ed4a9df3ee6fad0.txt  242133d2d457213f.txt  2f730439770ff8f3.txt  3a1d35b1d43486cd.txt  4132a04f3ddd2574.txt  4ccc9cd34160cf5.txt  6a4623218ad89202.txt  6c77f84b719275e3.txt  7f3ddec8e6f9dcb6.txt  88feb8c0f0a58c63.txt  a456d1e74c2fb0ee.txt  dd58ad9ae2bc4ae5.txt
data/test-cases/: 2a587cdd9e25a983.json  38dd81c9728de724.json  8fca476cca6d3eac.json  985c6af6f1534d35.json  9e89efa5ae712dee.json  b83e0b0c48a053cc.json  bc7945f9ea1b203c.json  e06565e2123127b7.json  f724a23d92a35f03.json
export/: influxDbData.txt  prometheusData.txt
history/: history.json
src/qa_kit/: __init__.py  cli.py  client.py  generator.py  runner.py  utils.py
tests/: conftest.py  test_basic.py  test_generator.py
tests/sample_specs/: api_spec.json
tests/specs/: api_spec.json  dummyjson_spec.json  reqres_api.json
tests/utils/: test_helpers.py
widgets/: behaviors.json  duration.json  severity.json  status-chart.json  suites.json  summary.json
